--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -5,14 +5,23 @@
   justify-content: space-around;
   align-items: center;
   margin: 0;
-  padding: 1em;
+  padding: 1em 0;
   position: absolute;
   bottom: 0;
   list-style: none;
+  width: 100vw;
 }
 
 .menuItem {
-  padding: 1em;
+  padding: 0 1em 1em 1em;
   text-decoration: none;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.menuItem img {
+  width: 40px;
 }
