--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -13,15 +13,16 @@
 }
 
 .menuItem {
-  padding: 0 1em 1em 1em;
+  padding: 0 1em 0.7em 1em;
   text-decoration: none;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  font-size: 15px;
 }
 
 .menuItem img {
-  width: 40px;
+  width: 30px;
 }
