--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -1,3 +1,12 @@
 :root {
   --page-title-color: green;
 }
+
+.Background {
+  height: 94vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
