--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -2,9 +2,19 @@
   --page-title-color: green;
 }
 
-.Background {
-  height: 94vh;
+.layout {
   width: 100vw;
+  height: 100vh;
+  background-image: url('../../assets/images/background-image.png');
+  background-size: cover;
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
+}
+
+.Background {
+  min-height: 100vh;
+  min-width: 100vw;
+  object-fit: cover;
   position: absolute;
   top: 0;
   left: 0;
