--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -1,7 +1,20 @@
 .input {
     background-color: transparent;
+    color: #F1F6F9;
+    text-align: center;
     border: 3px solid #F1F6F9;
     border-radius: 14px;
     width: 75vw;
-    height: 10vw;
+    height: 40px;
+    font-family: "Lato";
+    font-size: 20px;
+    margin: 20px 0;
+}
+
+.input:focus {
+    outline: none;
+}
+
+.label {
+    margin-bottom: 50px;
 }
