--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -1,13 +1,23 @@
 .loginForm {
-    font-family: "Montserrat SemiBold";
-    font-size: 20px;
+    font: 20px "Montserrat SemiBold";
     color: #F1F6F9;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 75vw;
-    margin-left: 12.5vw;
+    margin-left: 50vw;
     margin-top: 50vh;
-    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
     position: absolute;
+}
+
+.marginInput {
+    margin-bottom: 50px;
+}
+
+.forgetPass {
+    color: #9BA4B4;
+    text-decoration: underline;
+    font: 20px "Lato";
+    text-align: right;
 }
