--- a/src/pages/Form/FormInput.module.css
+++ b/src/pages/Form/FormInput.module.css
@@ -1,7 +1,24 @@
 .isLikedTrue {
-    background-color: red;
+    background-color: #F1F6F9;
+    color: #14274E;
+    border: none;
+    width: 70vw;
+    border-radius: 14px;
+    padding: 0px;
+    height: 45px;
+    margin-top: 20px;
+    font: 20px "Lato";
 }
 
 .isLikedFalse {
-    background-color: blue;
+    background-color: #14274E;
+    color: #F1F6F9;
+    border: 3px solid  #F1F6F9;
+    width: 70vw;
+    border-radius: 14px;
+    margin-top: 20px;
+    padding: 0px;
+    height: 45px;
+    font: 20px "Lato";
 }
+
