--- a/src/pages/Form/styles.css
+++ b/src/pages/Form/styles.css
@@ -5,14 +5,14 @@
     justify-content: center;
     width: 75vw;
     margin-left: 50vw;
-    margin-top: 50vh;
-    transform: translate(-47%, -50%);
+    margin-top: 45vh;
+    transform: translate(-50%, -50%);
     position: absolute;
 }
 
 .formInput h1 {
     color: #F1F6F9;
-    text-align: center;
     font: 20px "Montserrat SemiBold";
     margin-bottom: 20px;
+    justify-content: center
 }
