--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -5,6 +5,6 @@ button {
     width: 40vw;
     border: 0px solid;
     border-radius: 30px;
-    font: 20px "Montserrat Bold";
-    margin-top: 50px;
+    font: 3vh "Montserrat Bold";
+    margin-top: 6vh;
 }
