--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -5,8 +5,16 @@
     width: 50vw;
     border: 0px solid;
     border-radius: 30px;
-    font: 20px "Montserrat Bold";
-    margin-top: 50px;
+    font: 3vh "Montserrat Bold";
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.textButton {
+    text-decoration: underline #F1F6F9;
 }
 
 .largeButton img {
