--- a/src/pages/Entrance/index.css
+++ b/src/pages/Entrance/index.css
@@ -7,4 +7,8 @@
 
 .Entrance {
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
