--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 75vw;
     margin-left: 50vw;
     margin-top: 50vh;
