--- a/src/components/PageTitle/styles.css
+++ b/src/components/PageTitle/styles.css
@@ -4,9 +4,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: absolute;
-    left: 20vw;
-    top: 10vh;
+    margin: 10vh 0 20px 20vw;
 }
 
 .pageTitle img {
