--- a/src/components/ToggleButton/ToggleButton.module.css
+++ b/src/components/ToggleButton/ToggleButton.module.css
@@ -30,3 +30,26 @@
 .isLikedFalse img, .isLikedTrue img {
     height: 5vh;
 }
+
+.allToggleButtons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 80vw;
+    margin-left: 10vw;
+    margin-bottom: 20px;
+}
+
+.buttonDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttonDiv p {
+    color: #F1F6F9;
+    font: 2vh 'Montserrat SemiBold';
+    margin: 5px 0 0 0;
+}
