--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -5,12 +5,18 @@
 .layout {
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.layoutBackground {
+  width: 100vw;
+  height: 100vh;
   background-image: url('../../assets/images/background-image.png');
   background-size: cover;
   background-position: 50% 100%;
   background-repeat: no-repeat;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 .return {
