--- a/src/pages/Profile/MenuProfile.module.css
+++ b/src/pages/Profile/MenuProfile.module.css
@@ -2,23 +2,26 @@
     
     width: 75vw;
     margin-left: 15vw;
-    margin-top: 7vh;
+    margin-top: 9vh;
     overflow-y: scroll;
     overflow-y: hidden;
     position: absolute;
 }
 
 .titleProfile {
-
     font: 6vw "Montserrat Bold";
-    margin-bottom: 0.25vh;
+    margin-bottom: 1vh;
     color:  #F1F6F9;
+}
 
+.titleProfile span {
+    margin-top: 0.5vh;
+    position: absolute;
 }
 
 .titleProfile img {
     height: 9vw;
-    margin-right: 3vw;
+    margin-right: 5vw;
 }
 .menuProfileItemBox {
 
@@ -32,6 +35,7 @@
     padding: 4vw;
     width: 60vw;
     height: 6vh;
+    position: relative;
 }
 
 .menuProfileItem {
@@ -42,9 +46,24 @@
 
 .menuProfileItem img {
     width: 10vw;
-    margin-right: 3vw;
+    margin-right: 3vw; 
 }
 
 .menuProfileItem span {
-    text-align: center;
+    position : absolute;
+    margin-top: 1.4vh;
+}
+
+.settings {
+    margin-left: 85vw ;
+    margin-top: 4vh;
+    position: absolute;
+}
+.settings img {
+    height: 7vw;
+}
+
+.settings a {
+    margin-bottom: 2vh;
+    padding-top: 4vh;
 }
