--- a/src/components/Layout/styles.css
+++ b/src/components/Layout/styles.css
@@ -4,13 +4,17 @@
 
 .layout {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-image: url('../../assets/images/background-image.png');
   background-size: cover;
-  background-position: 50% 100%;
   background-repeat: no-repeat;
+  background-position: 50% 100%;
   overflow-x: hidden;
   overflow-y: scroll;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -10;
 }
 
 .return {
