--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -6,7 +6,7 @@
   align-items: center;
   margin: 0;
   padding: 1em 0;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   list-style: none;
   width: 100vw;
