--- a/src/pages/Profile/MenuProfile.module.css
+++ b/src/pages/Profile/MenuProfile.module.css
@@ -23,7 +23,7 @@
     height: 9vw;
     margin-right: 5vw;
 }
-.menuProfileItemBox {
+.menuProfileItem {
 
     display: flex;
     flex-direction: column;
@@ -36,13 +36,12 @@
     width: 60vw;
     height: 6vh;
     position: relative;
-}
 
-.menuProfileItem {
     text-decoration: none;
     color: #F1F6F9;
-    padding-top: 5vh;
+
 }
+
 
 .menuProfileItem img {
     width: 10vw;
@@ -51,7 +50,8 @@
 
 .menuProfileItem span {
     position : absolute;
-    margin-top: 1.4vh;
+    margin-top: 1.25vh;
+    margin-left: 14vw;
 }
 
 .settings {
@@ -66,4 +66,8 @@
 .settings a {
     margin-bottom: 2vh;
     padding-top: 4vh;
+}
+
+.profile {
+    width: 10vh;
 }
