--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,13 +1,20 @@
 .preferences {
-display: flex;
-   flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    display: none;
 }
 
 .preferencesTop {
     display: flex;
+    overflow: unset;
 }
 
 .preferencesBottom {
+    display: flex;
+    margin-top: 8vh;
+}
+
+.preferencesTop2 {
     display: flex;
     margin-top: 8vh;
 }
