--- a/src/components/SearchInput/styles.css
+++ b/src/components/SearchInput/styles.css
@@ -4,7 +4,7 @@
     border-radius: 150vh;
     width: 86vw;
     height: 7vh;
-    margin-top: 15vw;
+    margin-top: 10vh;
     margin-left: 6.5vw;
     display: flex;
 }
