--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -22,3 +22,13 @@
     margin-top: 8vh;
 }
 
+.homeLine {
+    margin-top: 8vh;
+}
+
+.homeTitle {
+    font: 4vh 'Montserrat Bold';
+    color: #F1F6F9;
+    margin-left: 6.5vw;
+    margin-top: 8vh;
+}
