Hook TrackSetting +  tracksettingswindow TEST

--- a/src/components/TrackSettings/styles.module.css
+++ b/src/components/TrackSettings/styles.module.css
@@ -10,3 +10,11 @@
 .trackSettingsIcon img {
     height: 4vh;
 }
+
+.displayTrackSettingsWindow {
+    display: block;
+}
+
+.displayTrackSettingsWindowNone {
+    display: none;
+}
