--- a/src/components/SearchInput/styles.css
+++ b/src/components/SearchInput/styles.css
@@ -19,6 +19,10 @@
     height: 7vh;
 }
 
+.searchInputWhereWeClick:focus {
+    outline: none;
+}
+
 .searchInputWhereWeClick::placeholder{
     color: #F1F6F9;
 }
