--- a/src/components/HorizontalScroll/styles.css
+++ b/src/components/HorizontalScroll/styles.css
@@ -31,10 +31,12 @@
 }
 
 .title {
-    font-size: 2.5vh;
+    font: 2.5vh 'Lato';
     color: #F1F6F9;
     margin: 0;
     padding: 0;
+    width: 20vw;
+    overflow-x: hidden;
 }
 
 .HorizontalScroll {
